--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
         <link href="css/general.css" rel="stylesheet">
     
        <header class="masthead">
-        <center><a href="index.html"><img src="images/white-logo.svg" alt="TG Stylings Logo" class="logo"></a>  </center>            <nav class="nav-top">
+        <center><a href="index.html"><img src="images/logo.svg" alt="TG Stylings Logo" class="logo"></a>  </center>            <nav class="nav-top">
             <ul>
                <a href="about.html">                                     <li>ABOUT</li>
                 </a>
